crates/plotnik-tests/tests/02-parser/recovery_unclosed/unclosed_sequence_shows_open_location.txt
Q = {
  (a)
  (b)
------------------ DIAGNOSTICS -------------------
error: missing closing `}`
 --> query.ptk:1:5
  |
1 |   Q = {
  |       ^ sequence started here
  |  _____|
  | |
2 | |   (a)
3 | |   (b)
  | |_____^
  |
help: add `}` to close the sequence
